--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "De-AI Google",
   "version": "1.0.0",
-  "description": "Appends \"-ai\" once and forces classic Web results.",
-  "permissions": ["declarativeNetRequestWithHostAccess"],
+  "description": "Appends \"-ai\" to Google search queries to exclude AI-generated results.",
+  "permissions": [],
   "host_permissions": [
     "*://*.google.com/*",
     "*://*.google.co.uk/*",
@@ -39,8 +39,5 @@
       "js": ["content.js"],
       "run_at": "document_start"
     }
-  ],
-  "declarative_net_request": {
-    "rule_resources": [{ "id": "rules", "enabled": true, "path": "rules.json" }]
-  }
+  ]
 }
