--- a/manifest-safari.json
+++ b/manifest-safari.json
@@ -20,7 +20,9 @@
     "16": "icons/16.png",
     "32": "icons/32.png",
     "48": "icons/48.png",
-    "128": "icons/128.png"
+    "128": "icons/128.png",
+    "256": "icons/256.png",
+    "512": "icons/512.png"
   },
   "content_scripts": [
     {
